2000-05-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* strings.h (SCM_NSTRINGP, SCM_NRWSTRINGP), tags.h
	(SCM_NDOUBLE_CELLP), vectors.h (SCM_NVECTORP):  Deprecated.

	* gc.c (scm_igc), gc.h (SCM_PTR_MASK, SCM_PTR_LT):  Removed #ifdef
	nosve #endif conditionally compiled code.

2000-05-23  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.c (scm_heap_seg_data_t): fixed comment for the `span' member.

2000-05-22  Michael Livshin  <mlivshin@bigfoot.com>

	* guile-doc-snarf.in: put the preprocessed file through sed to
	trim all lines to 1024 chars.  I hope it doesn't break anybody's
	sed.  we'll see.  (note: this is lossy trimming, i.e. the spill
	isn't wrapped around but actually chopped off.  this seemed to me
	safe because the current snarfer doesn't understand multi-line
	cookies anyway.  in the long term, it would be nice not to depend
	on AWK for anything.)

	* gc.h (SCM_[SET_]CELL_{WORD,OBJECT}, SCM_VALIDATE_CELL): reverted 
	the previous change to this macros, after deciding to torture the
	snarfer instead.

2000-05-21  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.h (SCM_[SET_]CELL_{WORD,OBJECT}, SCM_VALIDATE_CELL): brought
 	the yucky, ugly and nasty conditional compilation back.  sorry,
 	but it was either that or requiring GAWK to build Guile.
	(lots of places): removed the code that implemented the old GC
 	scheme.

	* init.c (scm_boot_guile_1): removed the code conditioned on
 	!GUILE_NEW_GC_SCHEME.

	* __scm.h: (GUILE_NEW_GC_SCHEME): removed.

	* gc.c (scm_protect_object, scm_unprotect_object): change the
 	implementation to more efficient (at least in the time complexity
 	sense).  the calls should now also be thread-safe -- I suspect
 	that people expect them to be.  (thanks to Han-Wen Nienhuys)
	(lots of places): removed the code that implemented the old GC
 	scheme.

	* hashtab.c (scm_hash_fn_create_handle_x): add missing
	SCM_REALLOW_INTS before return.  I really wonder about the
	possible interactions between hashtables, threads & GC.  it